Fix selector for receipt alignment styling in order summary

--- a/addons/pos_ghadir/static/src/scss/pos_custom.scss
+++ b/addons/pos_ghadir/static/src/scss/pos_custom.scss
@@ -137,7 +137,7 @@ div#order-date {
 .order-summary .d-flex {
   font-size: 1.6rem !important;
 }
-.d-flex.flex-column.align-items-center {
+.pos-receipt .d-flex.flex-column.align-items-center {
   border-bottom: 3px solid #000 !important;
 }
 
